# redmine-mcp-jun

./: .env.example  .gitignore  INSTALL_PROMPT.md  LICENSE  README.md  install.ps1  pyproject.toml  uninstall.ps1
src/redmine_mcp/: __init__.py  __main__.py  installer.py  server.py
