[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "redmine-mcp"
version = "0.3.0"
description = "An MCP server that lets Claude Code (and other MCP clients) read and write a Redmine instance in natural language."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "junstellar" }]
keywords = ["mcp", "redmine", "claude", "llm", "agent"]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/junstellar/redmine-mcp-jun"
Repository = "https://github.com/junstellar/redmine-mcp-jun"

[project.scripts]
redmine-mcp = "redmine_mcp.server:main"
redmine-mcp-setup = "redmine_mcp.installer:main"
redmine-mcp-uninstall = "redmine_mcp.installer:uninstall"

[tool.setuptools.packages.find]
where = ["src"]
